[package]
name = "gherkin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", optional = true }

[features]
default = [ "step-duplicate-check" ]
step-duplicate-check = [ "log" ]

[dev-dependencies]
anyhow = "1.0"
pretty_env_logger = "0.4"
clap = { version = "4", features = [ "derive" ] }